--- a/src/index.html
+++ b/src/index.html
@@ -7,19 +7,6 @@
     <title>WebPack</title>
   </head>
   <body>
-    <div class="container">
-      <h1>Webpack Course</h1>
-      <hr />
-      <div class="logo"></div>
-      <hr />
-      <pre></pre>
-      <hr />
-      <div class="box">
-        <h2>Less test</h2>
-      </div>
-      <div class="card">
-        <h2>SCSS test</h2>
-      </div>
-    </div>
+    <div id="app"></div>
   </body>
 </html>
